Adding header, main, and footer elements

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
   <meta name="description" content="">
 
   <meta property="og:title" content="">
@@ -22,11 +22,77 @@
 </head>
 
 <body>
+  <header>
+    <div class="content-wrapper">
+      <figure><a href="#" src="/img/unpluggedlogo.png" alt="unplugged logo"></a></figure>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="/page/faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="/page/about/index.html" target="_blank">ABOUT</a></li>
+        </ul>
+      </nav>
+    </div> <!-- header content-wrapper -->
+  </header>
+  <main>
+    <section class="hero-area">
+      <div class="content-wrapper">
+        <h1>Retreat from the desk, return refreshed.</h1>
+      </div> <!-- hero-area content-wrapper -->
+    </section>
+    <aside>
+      <div class="content-wrapper">
+        <div class="form-description">
+          <h3>Want to join the next retreat? </h3>
+          <p>Find out when we are holding our next retread nad how your company or team can sign up!</p>
+        </div>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
+        <div class="form">
+          <h3>Find out more</h3>
+          <input type="text" name="name" value="email address">
+          <input type="button" value="Download Itinerary">
+        </div>
+      </div> <!-- aside content-wrapper -->
+    </aside>
+    <section class="features">
+      <div class="content-wrapper">
+        <h2>Have the work week you always dreamed of – without the bad wifi.</h2>
+        <div class="content">
+          <article>
 
+          </article>
+        </div>
+      </div> <!-- features content-wrapper -->
+    </section>
+    <section class="reviews">
+      <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like this one.</h2>
+        <div class="content">
+
+        </div>
+      </div> <!-- reviews content-wrapper -->
+    </section>
+  </main>
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact-info">
+          <h4>Contact</h4>
+          <p class="phone">info@retreadweekly</p>
+          <address><a class="email" href="mailto:hello@unplugged.com">hello@unplugged.com</a></address>
+        </div>
+
+        <div class="social-icons">
+          <h4>Social</h4>
+        </div>
+      </div>
+      <div class="copyright">
+        <h5>Copyright 2024 | Unplugged</h5>
+      </div>
+    </div> <!-- footer content-wrapper -->
+  </footer>
+
+  <script src="/js/app.js"></script>
 </body>
 
 </html>
