--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>Unplugged Retreat</title>
   <link rel="stylesheet" href="/css/main.css">
   <meta name="description" content="">
 
@@ -15,7 +15,7 @@
 
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="apple-touch-icon" href="/icon.png">
 
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
@@ -32,13 +32,15 @@
           <li><a href="/page/about/index.html" target="_blank">ABOUT</a></li>
         </ul>
       </nav>
-    </div> <!-- header content-wrapper -->
+    </div>
+    <!-- header content-wrapper -->
   </header>
   <main>
     <section class="hero-area">
       <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed.</h1>
-      </div> <!-- hero-area content-wrapper -->
+      </div>
+      <!-- hero-area content-wrapper -->
     </section>
     <aside>
       <div class="content-wrapper">
@@ -49,47 +51,115 @@
 
         <div class="form">
           <h3>Find out more</h3>
-          <input type="text" name="name" value="email address">
-          <input type="button" value="Download Itinerary">
+          <form action="">
+            <input type="text" name="name" value="email address">
+            <input type="button" value="Download Itinerary">
+          </form>
         </div>
-      </div> <!-- aside content-wrapper -->
+      </div>
+      <!-- aside content-wrapper -->
     </aside>
     <section class="features">
       <div class="content-wrapper">
         <h2>Have the work week you always dreamed of – without the bad wifi.</h2>
-        <div class="content">
+        <div class="feature-content">
           <article>
-
+            <div>
+              <p class="fontawesome-icon"></p>
+              <p class="feature-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+            </div>
+          </article>
+          <article>
+            <div>
+              <p class="fontawesome-icon"></p>
+              <p class="feature-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
+                breakout rooms.</p>
+            </div>
+          </article>
+          <article>
+            <div>
+              <p class="fontawesome-icon"></p>
+              <p class="feature-description">Private chef team providing on demand meals - just like your team kitchen.
+              </p>
+            </div>
+          </article>
+          <article>
+            <div>
+              <p class="fontawesome-icon"></p>
+              <p class="feature-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.
+              </p>
+            </div>
+          </article>
+          <article>
+            <div>
+              <p class="fontawesome-icon"></p>
+              <p class="feature-description">Retreat facilitator to manage your day to day activities so you all get a
+                chance to reset.</p>
+            </div>
+          </article>
+          <article>
+            <div>
+              <p class="fontawesome-icon"></p>
+              <p class="feature-description">Dedicated computer room for times that you must wifi.</p>
+            </div>
           </article>
         </div>
-      </div> <!-- features content-wrapper -->
+      </div>
+      <!-- features content-wrapper -->
     </section>
     <section class="reviews">
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
-        <div class="content">
-
-        </div>
-      </div> <!-- reviews content-wrapper -->
+        <article class="review-content">
+          <div class="image"><img src="/" alt="A group of young women"></div>
+          <div>
+            <h3>LaCrue Bottling Co. October 2018</h3>
+          </div>
+          <div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+              fugiat
+              nulla pariatur.</p>
+          </div>
+        </article>
+      </div>
+      <!-- reviews content-wrapper -->
     </section>
   </main>
+  <!-- main content -->
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
         <div class="contact-info">
           <h4>Contact</h4>
-          <p class="phone">info@retreadweekly</p>
-          <address><a class="email" href="mailto:hello@unplugged.com">hello@unplugged.com</a></address>
+          <address>
+            <p class="phone">555-555-555</p>
+            <a class="email" href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+          </address>
         </div>
-
-        <div class="social-icons">
+        <!-- contact -->
+        <div class="social">
           <h4>Social</h4>
+          <div class="social-icons">
+            <p>
+              <a href="https://www.facebook.com/Skillcrush/" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://twitter.com/Skillcrush" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/skillcrush/" target="_blank"></a>
+            </p>
+          </div>
         </div>
+        <!-- social -->
       </div>
-      <div class="copyright">
-        <h5>Copyright 2024 | Unplugged</h5>
-      </div>
-    </div> <!-- footer content-wrapper -->
+    </div>
+    <!-- footer content-wrapper -->
+    <div class="copyright">
+      <p>Copyright 2024 | Unplugged</p>
+    </div>
   </footer>
 
   <script src="/js/app.js"></script>
