--- a/index.html
+++ b/index.html
@@ -115,13 +115,10 @@
           <div class="image"><img src="/" alt="A group of young women"></div>
           <div>
             <h3>LaCrue Bottling Co. October 2018</h3>
-          </div>
-          <div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
               ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-              fugiat
-              nulla pariatur.</p>
+              fugiat nulla pariatur.</p>
           </div>
         </article>
       </div>
