Adding flexbox to layout content

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <figure><a href="#"><img src="/img/unpluggedlogo.png" alt="unplugged logo"></a></figure>
+      <figure class="logo"><a href="#"><img src="/img/-unpluggedlogo.png" alt="unplugged logo"></a></figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -63,7 +63,7 @@
     <section class="features">
       <div class="content-wrapper">
         <h2>Have the work week you always dreamed of – without the bad wifi.</h2>
-        <div class="feature-content">
+        <div class="feature-items">
           <article>
             <div>
               <p class="fontawesome-icon"></p>
