Adding spacing to contents

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </aside>
     <section class="features">
       <div class="content-wrapper">
-        <h2>Have the work week you always dreamed of – without the bad wifi.</h2>
+        <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
         <div class="feature-items">
           <article>
             <div>
