--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
         <article class="review-content">
-          <div class="image"><img src="/" alt="A group of young women"></div>
-          <div>
-            <h3>LaCrue Bottling Co. October 2018</h3>
+          <figure class="image"><img src="/" alt="A group of young women"></figure>
+          <div class="review-text">
+            <h3>LaCrue Bottling Co.<br>October 2018</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
               ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
