--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <figure class="logo"><a href="#"><img src="/img/-unpluggedlogo.png" alt="unplugged logo"></a></figure>
+      <figure class="logo"><a href="#"><img src="/img/unpluggedlogo.png" alt="unplugged logo"></a></figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
