Adding images to home page

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
         <article class="review-content">
-          <figure class="image"><img src="/" alt="A group of young women"></figure>
+          <figure class="image"><img src="/img/unplugged-retreat-lacrue.jpg" alt="A group of young women"></figure>
           <div class="review-text">
             <h3>LaCrue Bottling Co.<br>October 2018</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
